be responsible about your wark

--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
   </nav>
 
 
-
-  <!-- Parallax Section 3 -->
-  <div class="parallax bg3">
+  <!-- Parallax Section 1 -->
+  <div class="parallax bg1">
     <div class="caption">
-      <span class="border">CONTACT</span>
+      <span class="border">ABOUT ME</span>
     </div>
   </div>
 
   <!-- Content Section -->
   <div class="section">
-    <h2>Where I Work</h2>
-    <p>kigali, <br>Phone: +25 0781943309<br>Email: uwase divine362@gmail.com</p>
+    <h2>I Love Photography</h2>
+    <p>photo graph reduce stress and improve mental health and even confidence.</p>
   </div>
 
+  <!-- Parallax Section 2 -->
+ 
 </body>
 </html>
