guys collabolate with others

--- a/index.html
+++ b/index.html
@@ -6,14 +6,8 @@
   <title>Parallax Template</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body><nav class="navbar">
-
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#portfolio">Portfolio</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
+<body>
+  
 
   <!-- Parallax Section 1 -->
   <div class="parallax bg1">
@@ -29,6 +23,12 @@
   </div>
 
   <!-- Parallax Section 2 -->
- 
+  
+  <!-- Content Section -->
+  <div class="section">
+    <h2>Where I Work</h2>
+    <p>kigali, <br>Phone: +25 0781943309<br>Email: uwase divine362@gmail.com</p>
+  </div>
+
 </body>
 </html>
