i must collaborate with others

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
 
   <!-- Parallax Section 1 -->
   <div class="parallax bg1">
@@ -23,7 +22,15 @@
   </div>
 
   <!-- Parallax Section 2 -->
-  
+ 
+
+  <!-- Parallax Section 3 -->
+  <div class="parallax bg3">
+    <div class="caption">
+      <span class="border">CONTACT</span>
+    </div>
+  </div>
+
   <!-- Content Section -->
   <div class="section">
     <h2>Where I Work</h2>
