--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 
   <!-- Parallax Section 2 -->
  
+  <!-- Content Section -->
+  <div class="section">
+    <h2>My Work</h2>
+    <p>Here are some of my latest projects. Click on the images to make them bigger.</p>
+  </div>
 
   <!-- Parallax Section 3 -->
   <div class="parallax bg3">
